# norns

./: .clang-format  .gitignore  .gitmodules  .luacheckrc  .travis.yml  .travis.yml_disable  CONTRIBUTING.md  Dockerfile  ISSUES.md  Makefile  README.md  atropos.sh  clang-format.sh  config.ld  crone.sh  edge.sh  lachesis.sh  lachesisrc.lua  matron.sh  matronrc.lua  norns.c  norns.sh  notes.md  readme-interface.md  readme-script.md  readme-setup.md  readme-startup.md  readme-style.md  readme-update.md  readme-usage.md  readme.md  releases.txt  run-uncrustify.sh  start-norns.sh  start.sh  stop-norns.sh  stop.sh  sync.sh  test-lua.sh  test.sh  (+10 more)
.devcontainer/: devcontainer.json
.github/workflows/: compile.yml  test.yml
atropos/: CMakeLists.txt  readme-macos.md  wscript
atropos/doc/: routing.dot
atropos/dsp/: StereoCompressor.dsp
atropos/osc-tests/: basic-routing.scd  softcut-6.scd  softcut-buffer.scd  softcut-engine.scd  softcut.scd
atropos/src/: BufDiskWorker.cpp  BufDiskWorker.h  Bus.h  Client.h  Commands.cpp  Commands.h  MixerClient.cpp  MixerClient.h  OscInterface.cpp  Poll.h  (+13 more)
crone/: CMakeLists.txt  coswin.dart  install.sh  osc-methods.txt  proto.scd  readme-macos.md  run.sh  wscript
crone/classes/: Crone.sc  CroneDefs.sc  CroneEngine.sc  CroneEngine_Cutter.sc  CroneEngine_TestSine.sc  CroneEngine_subclasses.sc  CutFadeVoice.sc
crone/classes/abstractions/: AudioContext.sc  CronePoll.sc  CutFadeVoice.sc  PatchMatrix.sc  PollThread.sc  ReportThread.sc
crone/classes/engines/: CroneEngine_Cutter.sc  CroneEngine_PolyPerc.sc  CroneEngine_SoftCut.sc
crone/doc/: softcut-voice.dot
crone/dsp/: EqSection.dsp  ZitaReverb.dsp
crone/dsp/workbench/: audio_spline_taper.py  dbfs_meter.py  requirements.txt
crone/lib/boost/libs/atomic/src/: lock_pool.cpp
crone/osc-tests/: basic-routing.scd  effects-mix.scd  softcut-buf-switch.scd  softcut-engine.scd  softcut-flags-test.scd  softcut-read-ducking.scd  softcut-slews.scd  softcut-stereo-follow.scd  softcut-sync.scd  softcut.scd  tape-playback.scd  tape.scd
crone/src/: AudioBus.h  AudioMain.cpp  AudioMain.h  BufDiskWorker.cpp  BufDiskWorker.h  BufWorker.cpp  BufWorker.h  Bus.h  Client.h  Commands.cpp  Commands.h  CronePoll.h  CutWorker.h  Evil.h  JackClient.cpp  JackClient.h  MixerClient.cpp  MixerClient.h  OscInterface.cpp  OscInterface.h  PeakMeter.h  Poll.cpp  Poll.h  SoftCutClient.cpp  SoftCutClient.h  SoftcutClient.cpp  SoftcutClient.h  Tape.h  Taper.cpp  Taper.h  Utilities.h  Window.cpp  Window.h  WindowedPeak.h  convert-osc-interface.py  cos_win.h  crone.cpp  crone.h  crone_main.h  crone_param_dispatch.cpp  (+2 more)
crone/src/effects/: CompressorParams.h  Compressor_param_lambdas.hpp  ReverbParams.h  Reverb_param_lambdas.hpp  StereoCompressor.h  StereoCompressor_param_enum.hpp  StereoCompressor_param_lambdas.hpp  ZitaReverb.h  ZitaReverb_param_enum.hpp  ZitaReverb_param_lambdas.hpp
crone/src/softcut/: FadeCurves.cpp  FadeCurves.h  Interpolate.h  LowpassBrickwall.h  Resampler.h  SoftClip.h  SoftCut.cpp  SoftCut.h  SoftCutHead.cpp  SoftCutHead.h  SoftCutVoice.cpp  SoftCutVoice.h  SubHead.cpp  SubHead.h  Svf.cpp  Svf.h  TestBuffers.cpp  TestBuffers.h  Types.h
crone/tests/: cutfadeloop-test-single.scd  cutfadevoice-record-test.scd  vari-loop-trig.scd
crone/ugens/: readme.md
crone/ugens/BufWrPre/: BufWrPre.cpp  BufWrPre.sc
crone/ugens/CutFadeLoop/: CMakeLists.txt  CutFadeLoop.cpp  CutFadeLoop.sc  CutFadeLoopLogic.cpp  CutFadeLoopLogic.h  cutfadeloop-test-single.scd  cutfadeloop-test.scd  install.sh
crone/ugens/CutFadeLoop/CutFadeLoop_juce/: CutFadeLoop.jucer
crone/ugens/CutFadeVoice/: CMakeLists.txt  CutFadeVoice.cpp  CutFadeVoice.sc  CutFadeVoiceLogic.cpp  CutFadeVoiceLogic.h  interp.h
crone/ugens/SoftCutHead/: SoftCutHead.cpp  SoftCutHeadLogic.cpp  SoftCutHeadLogic.h  SoftCutHeadLogic.sc
design/: software-structure.html  software-structure.org
doc/: effects.md  index.html  ldoc_pale.css  reference.md  softcut.html  softcut.md
ipc-test/: Makefile  Makefile~  busread.c  buswrite.c
ipc-wrapper/: Makefile
jack-cpu-capture/: main.c  readme.md
js-client/: app.js  index.html  style.css
lachesis/: wscript
lua/: .engine.lua.swp  arc.lua  audio.lua  config.lua  control.lua  controlspec.lua  effects.lua  encoders.lua  engine.lua  file.lua  fileselect.lua  formatters.lua  globals.lua  grid.lua  helpers.lua  hid.lua  input.lua  input_device_codes.lua  last.lua  listselect.lua  log.lua  map.lua  menu.lua  metro.lua  midi.lua  mix.lua  monome.lua  musicutil.lua  norns.lua  number.lua  option.lua  osc.lua  param.lua  paramset.lua  poll.lua  screen.lua  script.lua  startup.lua  state.lua  stickcut.lua  (+10 more)
maiden/: Makefile  handle.lua  init.lua  main.c
maiden-repl/: CMakeLists.txt  Makefile  README.md  wscript
maiden-repl/src/: io.c  io.h  main.c  msg_queue.c  msg_queue.h  page.c  page.h  pages.c  pages.h  ui.c  ui.h
matron/: Makefile  change-src-extension.sh  package.json  rename-c-cpp.sh  wscript
norns/: main.cpp  sidecar.cpp  sidecar.h  wscript
osc-test/: Makefile  osc-test-rx.c  osc-test-rx.scd  osc-test-tx.c  osc-test-tx.scd  osc-test.scd
resources/: vera-LICENSE.txt
sc/: CroneEngine_Cutter.sc  CroneEngine_PolyPerc.sc  CroneEngine_SoftCut.sc  CroneEngine_TestSine.sc  Engine_Cutter.sc  Engine_Knaster.sc  Engine_PolyPerc.sc  Engine_PolySub.sc  Engine_Polyperc.sc  Engine_Pusher.sc  Engine_Sines.sc  Engine_SoftCut.sc  Engine_SoftCutOld.sc  Engine_Step.sc  Engine_TestSine.sc  Engine_Why.sc  build-ugens.sh  install.sh  norns-config.sc  remote_repl.scd  run.sh  wscript
sc/ugens/SoftCutHead/: CMakeLists.txt  Resampler.h  SoftCutHead.cpp  SoftCutHead.sc  SoftCutHeadLogic.cpp  SoftCutHeadLogic.h  SubHead.cpp  SubHead.h  interp.h
sc/ugens/SoftCutHead/softcut-test/softcut-test/: main.cpp
sc/ugens/SoftCutHead/softcut-test/softcut-test.xcodeproj/: project.pbxproj
tests/: README.md  wscript
tools/: clone-all-norns-community.py
update/: changelog.txt  pack.sh  update.sh  version.txt
watcher/: wscript
ws-test/: Makefile  client.sh  pair  pair.c  serve.sh
ws-wrapper/: Makefile  ws-wrapper  wscript
(+856 files in other folders)
